# rustify

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: artist.rs  lib.rs
src/core/: auth.rs  cache.rs  mod.rs
src/core/structs/: artist_structs.rs  mod.rs  user_struct.rs
tests/: artisttest.rs  authtest.rs
