[package]
name = "rustify"
version = "0.1.0"
description = "A API wrapper for the spotify API"
license = "MIT"
homepage = ""
documentation = ""
repository = ""
authors = ["Fish"]
readme = "README.md"
keywords = ["API", "Spotify", "Wrapper"]
edition = "2021"
resolver = "2"

[features]
default = ["core", "client"]
core = []
client = ["core"]
experimental = ["core"]

[lib]
name = "rustify"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8"

[dev-dependencies]
rustify = { path = ".", features = ["experimental"] }
dotenv = "0.15.0"